# mazab

./: Cargo.toml
src/: block_writer.rs  checksum.rs  either.rs  formatter.rs  lib.rs  main.rs  pairer.rs  shuffler.rs  summarise.rs
